Minor resume tweak

--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
           <div class="skills">
             <h3>Ventiv Technology </h3>
             <p>Ventiv Technology, formerly Aon eSolutions, is a leading global provider of risk management, claims and safety solutions to businesses and public entities.  I was rehired into a leadership role in charge of Architecture, giving management responsibilities on top of my previous architectural workload.</p>
-            <strong>Director Architecture</strong>
+            <strong>Director of Architecture</strong>
             <p>February, 2016 - Present </p>
             <ul>
               <li>Responsible for Software Architecture, Release Management and Software Change Management in a DevOps organization</li>
