--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> </title>
-    <link href="http://bootswatch.com/lumen/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
    <style>
     </style>
@@ -25,7 +25,7 @@
           <h1>&nbsp;</h1>
           <div class="row"><div class="pull-right"></div></div>
           <div class="row"><div class="pull-right">Lake In The Hills, Illinois 60156</div></div>
-        <!--<img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="http://www.gravatar.com/avatar/c0d868c6f77de6b45544f46815413210" style="width: 100px; height: 100px; margin-top: 20px;">-->
+        <!--<img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="http://www.gravatar.com/avatar/21667510adbb914ecd5e1890f3ccc951" style="width: 100px; height: 100px; margin-top: 20px;">-->
         </div>
         </div>
       <hr style="color: #ccc; height: 4px;" />
@@ -34,7 +34,7 @@
           <h3>About</h3>
         </header>
         <div class="col-md-9">
-        <p>Application Developer, Technical Lead, and Software Architect for Java Enterprise Applications. Particularly interested in design and architecture of J2EE projects utilizing open source frameworks such as Spring.  Specifically enjoy working on large, complex problems that need custom solutions.</p>
+        <p>Hands on Application Developer, Technical Lead, and Software Architect for Java Enterprise Applications. Particularly interested in design and architecture of J2EE projects utilizing open source frameworks such as Spring.  Specifically enjoy working on large, complex problems that need custom solutions.</p>
         <strong>Phone:</strong> [Protected] <br />
         <strong>Email:</strong> [Protected]<br />
         <div class="hidden-print">
@@ -61,6 +61,9 @@
               <li>Architectural responsibility over 4 enterprise-class software suites</li>
               <li>Worked as a DevOps champion to automate many of the day-to-day processes across teams</li>
               <li>Introduced React / React Native to start Ventiv Capture, an offline-first mobile solution for iOS, Android and the Web</li>
+              <li>Used tooling such as DynaTrace to bring performance / scalability up to peak levels</li>
+              <li>Designed / Implemented SAML2 based Single Signon soluitons for various products</li>
+              <li>Designed / Implemented JWT based OAuth Authentication flow for web-based and native-based project</li>
             </ul>
             <hr />            <h3>Gnosis Secured</h3>
             <p>Gnosis Secured is a transaction management, middleware, and processing company that gives our clients modern data delivery &amp; optimized payment solutions.  I was hired to be the sole architect / developer on a product which has only existed in concept, due to my prior experiences as a Sr Architect in the Insurance marketplace.</p>
@@ -150,6 +153,21 @@
         </header>
         <div class="col-md-9">
           <div class="skills">
+            <h3>Docker Manager</h3>
+            <a href="https://github.com/Ventiv-Technology/DockerManager" target="_blank">https://github.com/Ventiv-Technology/DockerManager</a>
+            <ul>
+              <li>Customized deployment model in a &#x27;generic&#x27; way for the entire organization</li>
+              <li>Primary developer - 95% of code written on a product that simplified DevOps</li>
+            </ul>
+            <hr />
+            <h3>GraphQL JPA</h3>
+            <a href="https://github.com/jcrygier/graphql-jpa" target="_blank">https://github.com/jcrygier/graphql-jpa</a>
+            <ul>
+              <li>Personal proof-of-concept to learn more about GraphQL</li>
+              <li>Popular repository - used by many in the OSS community - ~100 stars</li>
+              <li>Maintained 100% on personal time - receiving many pull requests</li>
+            </ul>
+            <hr />
             <h3>GitBlit - Pure Java Git Solution</h3>
             <a href="https://github.com/gitblit/gitblit" target="_blank">https://github.com/gitblit/gitblit</a>
             <ul>
@@ -158,9 +176,10 @@
               <li>Customized Hook Variables</li>
             </ul>
             <hr />
-            <h3>AppConfig – Enterprise Properties management</h3>
-            <a href="https://github.com/Aon-eSolutions/AppConfig" target="_blank">https://github.com/Aon-eSolutions/AppConfig</a>
+            <h3>AppConfig – Enterprise Properties Management</h3>
+            <a href="https://github.com/Ventiv-Technology/AppConfig" target="_blank">https://github.com/Ventiv-Technology/AppConfig</a>
             <ul>
+              <li>Central repository for application configuration - to facilitate 12 factor apps</li>
               <li>Contributed during work time – to assist with Continuous Delivery</li>
             </ul>
             <hr />
@@ -172,10 +191,10 @@
             </ul>
             <hr />
             <h3>Various Plugins for Gradle</h3>
-            <a href="https://github.com/Aon-eSolutions" target="_blank">https://github.com/Aon-eSolutions</a>
+            <a href="https://github.com/Ventiv-Technology" target="_blank">https://github.com/Ventiv-Technology</a>
             <ul>
-              <li>https://github.com/Aon-eSolutions/gradle-dynaTrace</li>
-              <li>https://github.com/Aon-eSolutions/aon-buildtools</li>
+              <li>https://github.com/Ventiv-Technology/gradle-dynaTrace</li>
+              <li>https://github.com/Ventiv-Technology/aon-buildtools</li>
               <li>Contributed during work time – to assist with various build tasks</li>
               <li>Execution Plugin.  Enable simple command line execution (mainly for NodeJS integration)</li>
               <li>dynaTrace plugin.  Compuware provides ANT tasks, this extends into Gradle.</li>
