--- a/about/index.html
+++ b/about/index.html
@@ -19,13 +19,13 @@
       <div class="row">
         <div class="col-xs-6">
         <h1>John Crygier<h1>
-        <h4>Software Architect / Engineer</h4>
+        <h4>Software Architect / Director / Engineer</h4>
         </div>
         <div class="col-xs-6">
           <h1>&nbsp;</h1>
           <div class="row"><div class="pull-right"></div></div>
           <div class="row"><div class="pull-right">Lake In The Hills, Illinois 60156</div></div>
-        <!--<img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="http://www.gravatar.com/avatar/21667510adbb914ecd5e1890f3ccc951" style="width: 100px; height: 100px; margin-top: 20px;">-->
+        <!--<img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="http://www.gravatar.com/avatar/c0d868c6f77de6b45544f46815413210" style="width: 100px; height: 100px; margin-top: 20px;">-->
         </div>
         </div>
       <hr style="color: #ccc; height: 4px;" />
@@ -34,9 +34,10 @@
           <h3>About</h3>
         </header>
         <div class="col-md-9">
-        <p>Hands on Application Developer, Technical Lead, and Software Architect for Java Enterprise Applications. Particularly interested in design and architecture of J2EE projects utilizing open source frameworks such as Spring.  Specifically enjoy working on large, complex problems that need custom solutions.</p>
+        <p>Hands on Application Developer, Technical Lead, Software Architect and Director for Java Enterprise Applications. Particularly interested in design and architecture of J2EE projects utilizing open source frameworks such as Spring.  Specifically enjoy working on large, complex problems that need custom solutions.  Enjoys learning new technologies by example, and reading code to fully comprehend complex systems.</p>
         <strong>Phone:</strong> [Protected] <br />
         <strong>Email:</strong> [Protected]<br />
+        <strong>Web:</strong> http://john.crygier.com<br />
         <div class="hidden-print">
           <strong>Social:</strong>
             <span> <a href="https://github.com/jcrygier" target="_blank"><i class="fa fa-2x fa-github" title="Github"></i></a>&nbsp;&nbsp;&nbsp;</span>
@@ -59,18 +60,22 @@
               <li>Responsible for Software Architecture, Release Management and Software Change Management in a DevOps organization</li>
               <li>Successfully pioneered several large-scale software projects</li>
               <li>Architectural responsibility over 4 enterprise-class software suites</li>
+              <li>Responsible for product selection and Proof-of-Concepts both developed in-house and purchased/integrated</li>
               <li>Worked as a DevOps champion to automate many of the day-to-day processes across teams</li>
               <li>Introduced React / React Native to start Ventiv Capture, an offline-first mobile solution for iOS, Android and the Web</li>
               <li>Used tooling such as DynaTrace to bring performance / scalability up to peak levels</li>
-              <li>Designed / Implemented SAML2 based Single Signon soluitons for various products</li>
+              <li>Designed / Implemented SAML2 based Single Signon solutions for various products</li>
               <li>Designed / Implemented JWT based OAuth Authentication flow for web-based and native-based project</li>
+              <li>Introduced &#x27;Architecture Governance Review&#x27; items to introduce approval process into more complicated changes</li>
             </ul>
             <hr />            <h3>Gnosis Secured</h3>
             <p>Gnosis Secured is a transaction management, middleware, and processing company that gives our clients modern data delivery &amp; optimized payment solutions.  I was hired to be the sole architect / developer on a product which has only existed in concept, due to my prior experiences as a Sr Architect in the Insurance marketplace.</p>
             <strong>Director of IT</strong>
             <p>July, 2015 - February, 2016  <i class="fa fa-clock-o"></i> 7 months</p>
             <ul>
-              <li>Single resource for design, architecture, development and implementation of products</li>
+              <li>Developed a Proof-of-Concept application for an early-stage startup</li>
+              <li>Implemented in-house hosting solution, based on Linux and Docker, while integrating with hosted services on Redhat Openshift</li>
+              <li>Single resource for design, architecture, development, deployment and implementation of products</li>
               <li>Implemented ForgeRock stack to provision / maintain users with their Identity Access Management open source software</li>
               <li>Assisted in development of requirements and workflows</li>
               <li>Full stack development with AngularJS/NPM/Browserify, Spring Boot w/ JPA/Hibernate, PostgreSQL</li>
@@ -80,14 +85,15 @@
             <strong>Sr. Software Architect</strong>
             <p>December, 2013 - July, 2015  <i class="fa fa-clock-o"></i> 1 year, 6 months</p>
             <ul>
-              <li>Developed Load Testing tooling utilizing FitNesse and Jmeter.  </li>
+              <li>Research / PoC of many large projects including: dynaTrace, Black Duck, Activiti / Camunda Workflows</li>
               <li>Primary Architect on grassroots project to combine the best of three projects into a new, clean architecture.  Utilized AngularJS for the front-end and SpringMVC for the back-end.</li>
               <li>Developed Spring Security for authentication and runtime customization of authorization</li>
               <li>Heavy customization and utilization of Apache Solr.  Injected security into Solr and asynchronous synchronization over RabbitMQ</li>
-              <li>Research / PoC of many large projects including: dynaTrace, Black Duck, Activiti / Camunda Workflows</li>
               <li>Custom Business Rule Framework.  Utilized ANTLR to create a custom DSL that transpiled into Drools and JavaScript.  This allowed for highly structured business rules that could be easily maintained, with custom built tooling. </li>
               <li>Converted infrastructure from shell scripts to Docker containers.  Wrote Docker Manager (https://github.com/Ventiv-Technology/DockerManager) so anyone could control the infrastructure.</li>
+              <li>Developed Load Testing tooling utilizing FitNesse and Jmeter.</li>
             </ul>
+            <hr />            <h3>Aon eSolutions</h3>
             <p></p>
             <strong>Manager of Strategic Innovation and Prototyping</strong>
             <p>May, 2013 - December, 2013  <i class="fa fa-clock-o"></i> 7 months</p>
@@ -128,7 +134,7 @@
             </ul>
             <hr />            <h3>Zurich American Insurance Company</h3>
             <p>Zurich is a leading commercial property-casualty insurance provider serving the global corporate, large corporate, middle market, small business (not offered in Canada), specialty products and programs sectors.  I was hired at Zurich after two successful internships while studying at university, due to being able to accomplish any task while exceeding expectations.</p>
-            <strong>Web Design / Developer II</strong>
+            <strong>Web Design / Developer II / Subject Matter Expert</strong>
             <p>May, 2002 - September, 2006  <i class="fa fa-clock-o"></i> 4 years, 4 months</p>
             <ul>
               <li>Used Java, JSP, and Struts to design, develop and deploy an application for the company’s claims and corporate customer department.  Systems were built in WSAD / RAD6 for deployment on Websphere v5.1 for z/OS connecting to a DB2 database.</li>
@@ -249,7 +255,7 @@
               <strong>Version Control Systems (Master): </strong> Git, Subversion, Clearcase
             </div>
             <div class="col-md-12">
-              <strong>Open Source Software (Master): </strong> Activiti / Camunda / BPMN, Solr / Lucene, ANTLR
+              <strong>Open Source Software (Master): </strong> Activiti / Camunda / BPMN, Solr / Lucene, ANTLR, Drools
             </div>
             <div class="col-md-12">
               <strong>Databases (Advanced): </strong> Oracle 9i/10g/11g/12c, DB2, MySQL, PostgreSQL, MongoDB, CouchDB, SQL Server
